View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0032168 | Open CASCADE | OCCT:Visualization | public | 2021-02-25 13:48 | 2021-02-27 15:39 |
Reporter | mgn | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.3.0 | ||||
Target Version | 7.6.0 | Fixed in Version | 7.6.0 | ||
Summary | 0032168: Visualization - Wrong computation of screen axis in V3d_View::SetTwist method | ||||
Description | It is supposed to pass correct parameter into screenAxis function of V3d_View::SetTwist method: ... if (!screenAxis (aReferencePlane, gp::DZ(), myXscreenAxis, myYscreenAxis, myZscreenAxis) && !screenAxis (aReferencePlane, gp::DY(), myXscreenAxis, myYscreenAxis, myZscreenAxis) && !screenAxis (aReferencePlane, gp::DZ(), myXscreenAxis, myYscreenAxis, myZscreenAxis)) ... it is neccessary to use gp::DX() instead of gp::DZ() in the last string | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR32168 has been created by kgv. SHA-1: 0bd36a7de2661c5f93a97e1742c68dadc9c5553b Detailed log of new commits: Author: kgv Date: Thu Feb 25 14:10:18 2021 +0300 0032168: Visualization - Wrong computation of screen axis in V3d_View::SetTwist method Fixed wrong axis check. |
|
Branch CR32168 has been updated forcibly by kgv. SHA-1: 517624f5ac4e640da64a3a8ca0092decb1130d24 |
|
Patch is ready for review - OCCT: branch CR32168. http://jenkins-test-12.nnov.opencascade.com:8080/view/CR32168-master-KGV/ |
|
The patch was reviewed without remarks |
|
Combination - OCCT branch : IR-2021-02-26 master SHA - bc0711a5c3c2c9a627834136e10b13a8564c5a00 a87b7ddc8cb44606b91e3f37113847c3f5f50fdc Products branch : IR-2021-02-26 SHA - 5c3782d3621ca4bd4a2339197c1c5cf352b51ac7 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17811.770000000153 / 17875.850000000235 [-0.36%] Products Total CPU difference: 11543.6500000001 / 11549.600000000113 [-0.05%] Windows-64-VC14: OCCT Total CPU difference: 19344.3125 / 19351.640625 [-0.04%] Products Total CPU difference: 12900.578125 / 12845.234375 [+0.43%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR32168 has been deleted by inv. SHA-1: 517624f5ac4e640da64a3a8ca0092decb1130d24 |
|
|
Date Modified | Username | Field | Change |
---|---|---|---|
2021-02-25 13:48 | mgn | New Issue | |
2021-02-25 13:48 | mgn | Assigned To | => mgn |
2021-02-25 13:49 | mgn | Status | new => assigned |
2021-02-25 13:49 | mgn | Description Updated | |
2021-02-25 14:08 | kgv | Relationship added | child of 0029292 |
2021-02-25 14:08 | kgv | Product Version | => 7.3.0 |
2021-02-25 14:10 | git | Note Added: 0099148 | |
2021-02-25 14:12 | git | Note Added: 0099149 | |
2021-02-25 17:08 | kgv | Note Added: 0099154 | |
2021-02-25 17:08 | kgv | Assigned To | mgn => osa |
2021-02-25 17:08 | kgv | Status | assigned => resolved |
2021-02-25 18:37 | osa | Note Added: 0099155 | |
2021-02-25 18:37 | osa | Assigned To | osa => bugmaster |
2021-02-25 18:37 | osa | Status | resolved => reviewed |
2021-02-27 11:50 | bugmaster | Note Added: 0099203 | |
2021-02-27 11:50 | bugmaster | Status | reviewed => tested |
2021-02-27 11:55 | bugmaster | Test case number | => Not required |
2021-02-27 11:59 | bugmaster | Changeset attached | => occt master 1507ccda |
2021-02-27 11:59 | bugmaster | Status | tested => verified |
2021-02-27 11:59 | bugmaster | Resolution | open => fixed |
2021-02-27 12:26 | git | Note Added: 0099208 | |
2021-02-27 15:39 | kgv | Note Added: 0099223 |