0032168: Visualization - Wrong computation of screen axis in V3d_View::SetTwist method

Fixed wrong axis check.